--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -87,7 +87,7 @@ footer {
 
             &-social-media {
                 margin-top: 82px;
-                button {
+                .social-links-item {
                     background-color: transparent;
                     border: none;
                     cursor: pointer;
