--- a/css/styles.css
+++ b/css/styles.css
@@ -255,6 +255,20 @@ header section a {
   }
 }
 
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+}
+
 .status {
   display: -webkit-box;
   display: -ms-flexbox;
