--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -1,3 +1,9 @@
+main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
 .status {
     display: flex;
     justify-content: space-between;
